--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "labwork5",
-  "description": "labwork5",
+  "name": "icg_labwork4",
+  "description": "icg_labwork4",
   "scripts": {
     "test": "grunt"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/icg2018/labwork5.git"
+    "url": "https://github.com/icg-course/icg_labwork4.git"
   },
   "bugs": {
-    "url": "https://github.com/icg2018/labwork5/issues"
+    "url": "https://github.com/icg-course/icg_labwork4/issues"
   },
-  "homepage": "https://github.com/icg2018/labwork5",
+  "homepage": "https://github.com/icg-course/icg_labwork4",
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-xml-validator": "^1.1.3"
